fix: register expand/collapse only on Accordion's title

--- a/packages/components/src/accordion/Accordion.less
+++ b/packages/components/src/accordion/Accordion.less
@@ -1,5 +1,6 @@
 .tw-accordion-item {
   display: block;
+  cursor: pointer;
   &:hover {
     background-color: #fff !important; // overrides bootstrap rule for .decision
   }
@@ -14,5 +15,9 @@
       overflow: hidden;
       padding-bottom: 0 !important;
     }
+  }
+
+  .accordion-content {
+    cursor: default;
   }
 }
